# dmrgpp

./: AUTHORS  CMakeLists.txt  ChangeLog.txt
.github/workflows/: ci.yml
LanczosPlusPlus/TestSuite/inputs/: ConfigBase.psiTag  input0.ain  input1.ain  input100.inp
LanczosPlusPlus/scripts/: Impurity.pl
LanczosPlusPlus/src/: CMakeLists.txt  HeisenbergInfiniteTemperatureEnergy.cpp  LanczosDriver0.cpp  LanczosDriver1.cpp  LanczosDriver2.cpp  LanczosDriver3.cpp  LanczosDriver4.cpp  LanczosDriver5.cpp  LanczosGlobals.cpp  ProgramGlobals.cpp  SpinOrbital.cpp  Version.h  dynamics1.cpp  ed.cpp  lanczos.cpp  lorentzian.cpp  quasiparticleWeightZ.cpp  thermal.cpp
LanczosPlusPlus/src/Engine/: BasisBase.h  DefaultSymmetry.h  Engine.h  ExactDiag.h  InputCheck.h  InternalProductOnTheFly.h  InternalProductStored.h  LabeledOperator.h  LanczosDriver.h  LanczosDriver1.h  LanczosGlobals.h  LanczosOptions.h  ModelBase.h  ModelSelector.h  OneSector.h  Partitions.h  ProgramGlobals.h  RahulOperator.h  ReducedDensityMatrix.h  ReflectionSymmetry.h  TranslationSymmetry.h
LanczosPlusPlus/src/Models/FeBasedSc/: BasisFeAsBasedSc.h  BasisFeAsSpinOrbit.h  BasisOneSpinFeAs.h  FeBasedSc.h  ParametersModelFeAs.h
LanczosPlusPlus/src/Models/FermionSpinless/: BasisFermionSpinless.hh  FermionSpinless.hh  ParametersFermionSpinless.hh
LanczosPlusPlus/src/Models/Heisenberg/: BasisHeisenberg.h  Heisenberg.h  ParametersHeisenberg.h
LanczosPlusPlus/src/Models/HubbardOneOrbital/: BasisHubbardLanczos.h  BasisOneSpin.h  HubbardHelper.h  HubbardOneOrbital.h  ParametersModelHubbard.h
LanczosPlusPlus/src/Models/HubbardOneOrbitalRashbaSOC/: BasisRashbaSOC.h  HubbardOneOrbitalRashbaSOC.h
LanczosPlusPlus/src/Models/Immm/: BasisImmm.h  BasisOneSpinImmm.h  Immm.h  ParametersImmm.h
LanczosPlusPlus/src/Models/Kitaev/: BasisKitaev.h  Kitaev.h  ParametersKitaev.h
LanczosPlusPlus/src/Models/TjMultiOrb/: BasisTjMultiOrbLanczos.h  ParametersTjMultiOrb.h  TjMultiOrb.h
PsimagLite/examples/: CMakeLists.txt  inputPath.cpp  test_redirect_output.cpp
PsimagLite/src/: CMakeLists.txt  GslWrapper.h  InputNg.h  InputPath.hpp  LinearPrediction.h  Minimizer.h  RedirectOutput.hh
PsimagLite/src/AST/: Node.h  PlusMinusMultiplyDivide.h
PsimagLite/src/Ainur/: AinurMacros.hh
PsimagLite/src/Geometry/: Geometry.h  GeometryTerm.h  Star.h
PsimagLite/src/Io/: HDF5DisableExceptionPrinting.h  IoNgSerializer.h
PsimagLite/src/tests/: CMakeLists.txt  test_InputPath.cpp
TestSuite/inputs/: input9001.ain  introspect_ref0.txt
cincuenta/TestSuite/inputs/: inputCincuenta0.ain
cincuenta/src/: CMakeLists.txt  CincuentaInputCheck.h  DmftSolver.h  ImpuritySolverBase.h  ImpuritySolverDmrg.h  ImpuritySolverExactDiag.h  ModelParams.h  ParamsDmftSolver.h  Provenance.h  cincuenta.cpp  freeGimp.cpp
cincuenta/src/ExactDiag/: ModelParams.h
src/: CMakeLists.txt  DmrgDriver.h  Version.h  dmrg.cpp  introspect.cpp  manyOmegas.cpp  observe.cpp
src/Engine/: CmdLineOptions.hh  CookInputExpression.hh  DmrgRunner.cpp  DmrgRunner.h  HamiltonianAbstract.h  HamiltonianConnection.h  InputCheck.h  Introspect.hh  ManyOmegas.h  ObserverHelper.h  OptionsForIntrospect.hh  ProgramGlobals.h  Provenance.h  Qn.h  TargetingCommon.h
src/GPUPlugin/: BatchedGemm.cpp  BatchedGemm.h  CMakeLists.txt  analysis.h  apply_Htarget_sparse.c  apply_Htarget_sparse.cpp  apply_Htarget_sparse_not_ready.cpp  apply_Htarget_vbatch.c  apply_Htarget_vbatch.cpp  cal_kron_flops.cpp  dmrg_lapack.cpp  dmrg_lapack.h  dmrg_malloc.cpp  dmrg_types.h  dmrg_vbatch.cpp  dmrg_vbatch.h  estimate_work.cpp  estimate_work.h  gen_patches_comb.cpp  setup_matrix.cpp  setup_matrix.h  setup_nC.cpp  setup_nC.h  setup_sparse_batch.cpp  setup_sparse_batch.h  setup_vbatch.cpp  setup_vbatch.h  test_gen_patches_comb.cpp  test_vbatch.cpp  test_vbatch.h  unsetup_sparse_batch.cpp  unsetup_vbatch.c  unsetup_vbatch.cpp
util/: CMakeLists.txt  check_value.cpp
